# serializer version: 1
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruits-aiosqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruits-asyncmy_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruits-asyncpg_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruits-psycopg_async_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruitsPaginated-aiosqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM (
          SELECT fruit.water_percent AS water_percent,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC,
                    fruit.water_percent ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruitsPaginated-asyncmy_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM (
          SELECT fruit.water_percent AS water_percent,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC,
                    fruit.water_percent ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruitsPaginated-asyncpg_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM (
          SELECT fruit.water_percent AS water_percent,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC,
                    fruit.water_percent ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-async-tracked-orderedFruitsPaginated-psycopg_async_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM (
          SELECT fruit.water_percent AS water_percent,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC,
                    fruit.water_percent ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-sync-tracked-orderedFruits-psycopg_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-sync-tracked-orderedFruits-sqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-sync-tracked-orderedFruitsPaginated-psycopg_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM (
          SELECT fruit.water_percent AS water_percent,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC,
                    fruit.water_percent ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-sync-tracked-orderedFruitsPaginated-sqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id
    FROM (
          SELECT fruit.water_percent AS water_percent,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC,
                    fruit.water_percent ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.water_percent ASC,
            fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruits-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruits-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruits-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruits-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruitsPaginated-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = ?
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   WHERE fruit.name = ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruitsPaginated-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = %s
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   WHERE fruit.name = %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruitsPaginated-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = $1::VARCHAR
           ORDER BY fruit.id ASC
           LIMIT $2::INTEGER
          OFFSET $3::INTEGER
         ) AS fruit
   WHERE fruit.name = $4::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-async-tracked-filteredFruitsPaginated-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = %(name_1)s::VARCHAR
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   WHERE fruit.name = %(name_2)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-sync-tracked-filteredFruits-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-sync-tracked-filteredFruits-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-sync-tracked-filteredFruitsPaginated-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = %(name_1)s::VARCHAR
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   WHERE fruit.name = %(name_2)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_query_hook_where[session-sync-tracked-filteredFruitsPaginated-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = ?
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   WHERE fruit.name = ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsHooks-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsHooks-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsHooks-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsHooks-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsPaginatedHooks-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsPaginatedHooks-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsPaginatedHooks-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-async-tracked-fruitsPaginatedHooks-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-sync-tracked-fruitsHooks-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-sync-tracked-fruitsHooks-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-sync-tracked-fruitsPaginatedHooks-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_columns_hook[session-sync-tracked-fruitsPaginatedHooks-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.color_id,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.color_id AS color_id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-aiosqlite_engine]
  '''
  SELECT color.id
    FROM color AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-aiosqlite_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-asyncmy_engine]
  '''
  SELECT color.id
    FROM color AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-asyncmy_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-asyncpg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruits-psycopg_async_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-aiosqlite_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT ?
          OFFSET ?
         ) AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-aiosqlite_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-asyncmy_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT %s,
                 %s
         ) AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-asyncmy_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-asyncpg_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-asyncpg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-psycopg_async_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-async-tracked-colorsWithFilteredFruitsPaginated-psycopg_async_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruits-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruits-psycopg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruits-sqlite_engine]
  '''
  SELECT color.id
    FROM color AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruits-sqlite_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruitsPaginated-psycopg_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruitsPaginated-psycopg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruitsPaginated-sqlite_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT ?
          OFFSET ?
         ) AS color
   ORDER BY color.id ASC
  '''
# ---
# name: test_load_relationships_nested[session-sync-tracked-colorsWithFilteredFruitsPaginated-sqlite_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.sweetness AS fruit_sweetness,
         fruit.water_percent AS fruit_water_percent,
         fruit.best_time_to_pick AS fruit_best_time_to_pick,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit.id AS fruit_id,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-aiosqlite_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-asyncmy_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-asyncpg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsHooks-psycopg_async_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-aiosqlite_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-asyncmy_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-asyncpg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-async-tracked-fruitsPaginatedHooks-psycopg_async_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsHooks-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsHooks-psycopg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsHooks-sqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsHooks-sqlite_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsPaginatedHooks-psycopg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsPaginatedHooks-psycopg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsPaginatedHooks-sqlite_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_no_columns[session-sync-tracked-fruitsPaginatedHooks-sqlite_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at,
         fruit_farm.id AS fruit_farm_id
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-aiosqlite_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-aiosqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-asyncmy_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-asyncmy_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
   INNER JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooks-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-aiosqlite_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT ?
          OFFSET ?
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-aiosqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-asyncmy_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT %s,
                 %s
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-asyncmy_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
   INNER JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-async-tracked-colorsHooksPaginated-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooks-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooks-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooks-sqlite_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooks-sqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooksPaginated-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooksPaginated-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooksPaginated-sqlite_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id
            FROM color AS color
           ORDER BY color.id ASC
           LIMIT ?
          OFFSET ?
         ) AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_load_relationships_on_nested_field[session-sync-tracked-colorsHooksPaginated-sqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-aiosqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-asyncmy_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
   INNER JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsHooks-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-aiosqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-asyncmy_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
   INNER JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-async-tracked-fruitsPaginatedHooks-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsHooks-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsHooks-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsHooks-sqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsHooks-sqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsPaginatedHooks-psycopg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsPaginatedHooks-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsPaginatedHooks-sqlite_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_load_relationships_with_columns[session-sync-tracked-fruitsPaginatedHooks-sqlite_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.created_at AS color_created_at,
         color.id AS color_id
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_query_hook_on_type[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.name = ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_query_hook_on_type[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.name = %s
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_query_hook_on_type[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.name = $1::VARCHAR
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_query_hook_on_type[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.name = %(name_1)s::VARCHAR
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_query_hook_on_type[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.name = %(name_1)s::VARCHAR
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_query_hook_on_type[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.name = ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
